--- a/scrabble/css/style.css
+++ b/scrabble/css/style.css
@@ -39,6 +39,7 @@ header {
 	font-weight: 700;
 	font-family: sans-serif;
 	padding: 0.1em;
+	box-shadow:inset 0px 0px 0px 1px #444;
 }
 
 #board .greenCellColor {
@@ -79,7 +80,7 @@ header {
 	border-top: 2px #888 solid;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-evenly;
 	padding: 5px 0%;
 }
 
@@ -95,4 +96,20 @@ header {
 
 .hoverable-letter {
 	cursor: pointer;
+}
+
+#endturnbtn {
+	cursor: pointer;
+	height: 2em;
+	box-shadow:inset 0px 0px 0px 2px #050;
+	background-color: green;
+    border: 2px solid #00d300;
+    font-weight: 800;
+}
+
+#endturnbtn[disabled] {
+	background-color: red;
+	border: 2px solid #d30000;
+	box-shadow:inset 0px 0px 0px 2px #500;
+	cursor: initial;
 }
